--- a/package.json
+++ b/package.json
@@ -3,5 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "christopherbiscardi <chris@christopherbiscardi.com> (@chrisbiscardi)",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@sector/breadbox": "^0.0.4",
+    "toastrs": "^0.0.19"
+  },
+  "scripts": {
+    "build": "toast incremental ."
+  }
 }
