--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "author": "christopherbiscardi <chris@christopherbiscardi.com> (@chrisbiscardi)",
   "license": "MIT",
+  "type": "module",
   "dependencies": {
     "@sector/breadbox": "^0.0.4",
     "toastrs": "^0.0.19"
