--- a/package.json
+++ b/package.json
@@ -7,10 +7,23 @@
   "type": "module",
   "dependencies": {
     "@sector/breadbox": "^0.0.4",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8.1.1",
+    "postcss-cli": "^8.0.0",
+    "tailwindcss": "^1.8.10",
     "toastrs": "^0.0.19"
   },
   "scripts": {
     "prepare": "breadbox --dest public/web_modules",
-    "build": "toast incremental ."
+    "build": "npm run build:css && npm run build:site",
+    "build:css": "postcss --config postcss-config index.css -o public/styles.css",
+    "build:site": "toast incremental ."
+  },
+  "snowpack": {
+    "installOptions": {
+      "alias": {
+        "react": "preact/compat"
+      }
+    }
   }
 }
