--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@sector/breadbox": "^0.0.4",
     "@tailwindcss/ui": "^0.6.2",
     "autoprefixer": "^10.0.1",
+    "netlify-plugin-toast-cache": "0.0.1",
     "postcss": "^8.1.1",
     "postcss-cli": "^8.0.0",
     "tailwindcss": "^1.8.10",
