--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "postcss": "^8.1.1",
     "postcss-cli": "^8.0.0",
     "tailwindcss": "^1.8.10",
-    "toastrs": "0.0.20"
+    "toast": "^0.3.4"
   },
   "scripts": {
     "postinstall": "breadbox --dest public/web_modules",
